--- a/_posts/2015-12-11-ICI-stylesheet-2011-08-30.md
+++ b/_posts/2015-12-11-ICI-stylesheet-2011-08-30.md
@@ -1,7 +1,7 @@
 ---
-title: ICI-stylesheet-2011
 layout: page
-author: julie.reposa
+title: ICI-stylesheet-2011
+category: doc
 permalink: /ici-stylesheet-2011
 source-id: 1vaGWZlH9VTSQBIc4M9Zg29vUwWZjFJmbhT17b0hli2Y
 published: true
